# agentic-ai-primitives

./: .gitignore  README.md  pyproject.toml
docs/: agent-loop.md  evals.md  governance.md
docs/adr/: ADR-001-LLM-Serving-Layer.md  ADR002-Tiered-LLM-Model-strategy.md
examples/: quickstart.py
lessons/01-tool-calling-seam/: README.md  example.py
lessons/02-intent-routing/: README.md  example.py
lessons/03-rag-pipeline/: README.md  example.py  functions.py
lessons/04-rag-evaluation/: README.md  example.py
lessons/05-agent-loop-primitives/: README.md
lessons/05-agent-loop-primitives/agentic_learning/: __init__.py  agent_loop.py  evals.py  governance.py
src/agentic_learning/agentic_loop_with_RAG/: RAG_earning_rpt_QnA.py  RAG_earning_rpt_QnA_Eval.py  RAG_functions.py
src/agentic_learning/agentic_loop_with_router/: weather_checker_router.py
src/agentic_learning/simple_agentic_loop/: weather_checker.py
src/agentic_learning_workspace.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: conftest.py  test_evals.py  test_governance.py  test_rag_eval_script.py
