[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agentic-learning-workspace"
version = "0.1.0"
description = "A learning workspace for AI agentic coding, governance, and evals."
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "nebulus", email = "nebulusalpha01@gmail.com" }]
dependencies = [
    "litellm>=1.0.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[tool.setuptools]
package-dir = {"" = "lessons/05-agent-loop-primitives"}

[tool.setuptools.packages.find]
where = ["lessons/05-agent-loop-primitives"]

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
addopts = "-q"
